--- a/social-shop/app/index.html
+++ b/social-shop/app/index.html
@@ -50,7 +50,9 @@
     <script src="scripts/controllers/addproduct.js"></script>
     <script src="scripts/controllers/searchcustomer.js"></script>
     <script src="scripts/controllers/infoscustomer.js"></script>
+    <script src="scripts/controllers/listproducts.js"></script>
     <script src="scripts/services/customer.js"></script>
+    <script src="scripts/services/product.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
